[package]
name = "moonshine-util"
version = "0.3.2"
edition = "2021"
license = "MIT"
description = "Collection of utilities for Bevy"
categories = ["game-development"]
keywords = ["bevy", "utility"]
readme = "README.md"
homepage = "https://github.com/Zeenobit/moonshine_util"
repository = "https://github.com/Zeenobit/moonshine_util"

[dependencies]
disqualified = "1"
bevy_app = "0.17"
bevy_ecs = "0.17"
bevy_platform = "0.17"
bevy_reflect = "0.17"
bevy_log = "0.17"

[dev-dependencies]
bevy = "0.17"
