[package]
name = "moonshine-util"
version = "0.5.1"
edition = "2021"
license = "MIT"
description = "Collection of utilities for Bevy"
categories = ["game-development"]
keywords = ["bevy", "utility"]
readme = "README.md"
homepage = "https://github.com/Zeenobit/moonshine_util"
repository = "https://github.com/Zeenobit/moonshine_util"

[dependencies]
disqualified = "1"
bevy_app = "0.19"
bevy_ecs = "0.19"
bevy_platform = "0.19"
bevy_reflect = "0.19"
bevy_log = "0.19"

[dev-dependencies]
bevy = "0.19"
